# document_conversion_crawler_rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  docs.yml  draft.yml  format.yml  test.yml
src/: cli.rs  error.rs  lazy_logger.rs  macros.rs  main.rs  pre_unix.rs  pre_windows.rs  prelude.rs
src/conversion/: mod.rs  pandoc.rs
